Brush Color Flip from keyboard (X) does not update color picker panel #66414

Closed
opened 2019-07-04 12:13:36 +02:00 by takaaki takeda · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-03 22:34, hash: c252fe7a32
Worked: (optional)

Short description of error
Calling Brush Color Flip from keyboard shortcut (X) does not update the color in color picker panel.
FlipBrush2.gif

Exact steps for others to reproduce the error
Open Image Editor and set to Paint Mode.
Make New Image.
Draw some image with draw tool.
Call Brush Color Flip from keybord shortcut (X).
Brush Color is flipped, but color in Color Picker Panel is not updated immediately.
As shown in GIF animation image uploaded above.
(Any stroke or hovering mouse on the panel update it)

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-03 22:34, hash: `c252fe7a32` Worked: (optional) **Short description of error** Calling Brush Color Flip from keyboard shortcut (X) does not update the color in color picker panel. ![FlipBrush2.gif](https://archive.blender.org/developer/F7566146/FlipBrush2.gif) **Exact steps for others to reproduce the error** Open Image Editor and set to Paint Mode. Make New Image. Draw some image with draw tool. Call Brush Color Flip from keybord shortcut (X). Brush Color is flipped, but color in Color Picker Panel is not updated immediately. As shown in GIF animation image uploaded above. (Any stroke or hovering mouse on the panel update it)
Author

Added subscriber: @popqjp

Added subscriber: @popqjp
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-07-04 12:44:33 +02:00
Member

Confirmed, will fix

Confirmed, will fix

This issue was referenced by c06eb4ab94

This issue was referenced by c06eb4ab94113086691779e78e970b85941651a8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66414
No description provided.