Fix T66414: Brush Color Flip from keyboard (X) does not update color picker panel

Reviewers: brecht

Maniphest Tasks: T66414

Differential Revision: https://developer.blender.org/D5181